After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737069 - Dialog displays bad message after changing game type in preferenes
Dialog displays bad message after changing game type in preferenes
Status: RESOLVED FIXED
Product: tali
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Tali maintainer(s)
Tali maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-09-21 10:14 UTC by Sahil Sareen
Modified: 2014-10-14 21:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Display correct message in dialog after preferences are updated (902 bytes, patch)
2014-09-21 10:14 UTC, Sahil Sareen
committed Details | Review

Description Sahil Sareen 2014-09-21 10:14:12 UTC
Created attachment 286727 [details] [review]
Display correct message in dialog after preferences are updated

How to reproduce?

1. Go to preferences
2. Change the game type. ( Colors->Regular or Regular->Colors )
-----
A dialog saying "Current game will complete with original number of players." is shown.

This message is ok incase the number of players is changed but not if just the "game type" is changed.
-----
I propose displaying "Preferences will be updated in the next game." to handle both cases:
(i) Change in number of players ( humans / computers )
(ii) Change in game type.
Comment 1 Michael Catanzaro 2014-09-21 17:04:20 UTC
Review of attachment 286727 [details] [review]:

Yup, thanks!

Long-term, the best fix would be to move most of these options to a new game screen. The preferences dialog should only contain items that can be safely changed in the middle of the game, or that only matter at the start of the game.