Dialog to display correct message when the game type is changed.

https://bugzilla.gnome.org/show_bug.cgi?id=737069